# async_system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  hello.py  main.py  pyproject.toml
.github/workflows/: deploy-ec2.yml  provision-deploy-ec2.yml  test.yml  validate-cfn.yml
builders/: Dockerfile
cloudformation/: ec2-template.yml
config/: __init__.py
domain/posts/: models.py
domain/users/: models.py
infrastructure/utils/: __init__.py  authentication.py
presentation/: __init__.py  posts.py  users.py
presentation/rest/: __init__.py  posts.py  users.py
src/: db.py  main.py
src/domain/: food_item.py  users.py
src/domain/food_items/: __init__.py  food_item.py  models.py
src/domain/users/: __init__.py  models.py
src/infrastructure/: __init__.py
src/infrastructure/application/: __init__.py  application.py
src/infrastructure/database/: session.py  setup.py  tables.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 0000_initial.py  0001_add_nutrients.py
src/infrastructure/database/tables/: __init__.py  food_item.py  user.py
src/infrastructure/utils/: __init__.py  authentication.py
src/presentation/rest/: food_items.py  posts.py  users.py
src/rest/: __init__.py  food_items.py  posts.py  users.py  websocket.py
src/tests/: test_main.py
