[project]
name = "async-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "websockets>=15.0.1",
    "ruff>=0.11.0",
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pytest-cov>=6.1.0",
]


[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), isort (I), pep8-naming (N), flake8-bugbear (B)
select = ["E", "F", "I", "N", "B", "W", "C90"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
